add other in change request

--- a/.github/ISSUE_TEMPLATE/change---add-to-an-existing-ontology-definition-request.yml
+++ b/.github/ISSUE_TEMPLATE/change---add-to-an-existing-ontology-definition-request.yml
@@ -25,6 +25,7 @@ body:
         - label: rdfs:domain
         - label: rdfs:range
         - label: rdfs:subPropertyOf
+        - label: other...
   - type: textarea
     attributes:
       label: Detailed Description
